SERVER-7206 change global variable in profiler to be heap-based

Conflicts:
	src/mongo/db/instance.cpp